--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,12 @@ h1 {
     margin: 0;
 }
 
+h3 {
+    text-align: center;
+    font-family: var(--default-heading-font);
+    font-size: 24px;
+}
+
 .btn-branding {
     color: white;
     padding: 15px 30px;
@@ -37,4 +43,10 @@ img {
     width: 500px;
     border-radius: 4px;
     border: 1px solid #F3F2ED;
+}
+
+@media (max-width: 576px) {
+  .description {
+    margin: 0 auto;
+  }
 }
