added content & styling to about page

--- a/src/style.css
+++ b/src/style.css
@@ -49,4 +49,11 @@ img {
   .description {
     margin: 0 auto;
   }
+  h1 {
+    font-size: 56px;
+  }
+}
+
+.about-me {
+    text-align: center;
 }
