--- a/src/style.css
+++ b/src/style.css
@@ -52,8 +52,24 @@ img {
   h1 {
     font-size: 56px;
   }
+  .me-picture {
+    display: none;
+  }
 }
 
 .about-me {
     text-align: center;
+    font-size: 28px;
+}
+.me-picture {
+    border-radius: 20px;
+}
+
+.brand-logos {
+    padding: 20px;
+}
+
+h4, h5 {
+    text-align: center;
+    font-family: var(--default-heading-font);
 }
